ingress-canary/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-ing
  namespace: qae
spec:
  ingressClassName: nginx
  rules:
  - host: fruit.bwangel.me
    http:
      paths:
      - backend:
          service:
            name: apple-service
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-ing
  namespace: qae-stage
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "0"
    nginx.ingress.kubernetes.io/canary-by-header: "X-QAE-CANARY"
spec:
  ingressClassName: nginx
  rules:
    - host: fruit.bwangel.me
      http:
        paths:
          - backend:
              service:
                name: apple-service
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
